@@ -493,7 +493,7 @@
   <target name="doc" depends="forrestdoc,javadoc,pydoc,cdoc,cppdoc" description="Generate docs">
   </target>
 
-  <target name="forrestdoc" depends="forrest.check" description="Generate forrest-based documentation. To use, specify -Dforrest.home=&lt;base of Apache Forrest installation&gt; on the command line." if="forrest.home">
+  <target name="forrestdoc" depends="init,forrest.check" description="Generate forrest-based documentation. To use, specify -Dforrest.home=&lt;base of Apache Forrest installation&gt; on the command line." if="forrest.home">
     <echo  file="${build.dir}/avro.ent" append="false">
       &lt;!ENTITY AvroVersion "${version}"&gt;
     </echo>
